--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>My GitHub Portfolio</title>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+  <body class="bg-light text-dark p-4">
+    <div id="app" x-data="{ repos: [] }" x-init="
+      fetch('https://api.github.com/users/thr19/repos')
+        .then(r => r.json())
+        .then(data => repos = data)
+    ">
+      <h1><i class="bi-box-arrow-in-left"></i> My GitHub Repositories</h1>
+
+      <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" x-show="repos.length">
+        <template x-for="repo in repos" :key="repo.id">
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title" x-text="repo.name"></h5>
+                <p class="card-text" x-text="repo.description || 'No description'"></p>
+              </div>
+              <div class="card-footer">
+                <a class="btn btn-sm btn-primary" :href="repo.html_url" target="_blank">View Repo</a>
+              </div>
+            </div>
+          </div>
+        </template>
+      </div>
+    </div>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
