--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .then(r => r.json())
         .then(data => repos = data)
     ">
-      <h1><i class="bi-box-arrow-in-left"></i> My GitHub Repositories</h1>
+      <h1><i class="bi bi-git"></i> My GitHub Repositories</h1>
 
       <div class="row row-cols-1 row-cols-md-2 g-4 mt-4" x-show="repos.length">
         <template x-for="repo in repos" :key="repo.id">
@@ -28,6 +28,6 @@
         </template>
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
